Actual first commit of dotfiles, mistake on symlinks

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,39 @@
-/Users/cjappl/.tmux.conf
+################################################################
+# CJAPPL fish_config 
+################################################################
+#                        .OO
+#                       .OOOO
+#                      .OOOO'
+#                      OOOO'          .-~~~~-.
+#                      OOO'          /   (o)(o)
+#              .OOOOOO `O .OOOOOOO. /      .. |
+#          .OOOOOOOOOOOO OOOOOOOOOO/\    \____/
+#        .OOOOOOOOOOOOOOOOOOOOOOOO/ \\   ,\_/
+#       .OOOOOOO%%OOOOOOOOOOOOO(#/\     /.
+#      .OOOOOO%%%OOOOOOOOOOOOOOO\ \\  \/OO.
+#     .OOOOO%%%%OOOOOOOOOOOOOOOOO\   \/OOOO.
+#     OOOOO%%%%OOOOOOOOOOOOOOOOOOO\_\/\OOOOO
+#     OOOOO%%%OOOOOOOOOOOOOOOOOOOOO\###)OOOO
+#     OOOOOO%%OOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+#     OOOOOOO%OOOOOOOOOOOOOOOOOOOOOOOOOOOOOO
+#     `OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO'
+#   .-~~\OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO'
+#  / _/  `\(#\OOOOOOOOOOOOOOOOOOOOOOOOOOOO'
+# / / \  / `~~\OOOOOOOOOOOOOOOOOOOOOOOOOO'
+#|/'  `\//  \\ \OOOOOOOOOOOOOOOOOOOOOOOO'
+#       `-.__\_,\OOOOOOOOOOOOOOOOOOOOO'
+#           `OO\#)OOOOOOOOOOOOOOOOOOO'
+#             `OOOOOOOOO''OOOOOOOOO'
+#               `""""""'  `""""""'
+################################################################
+
+################################################################
+# => Windows/Panes
+################################################################
+
+bind '%' split-window -h -c '#{pane_current_path}'  # Split panes horizontal, keeps current path
+bind '"' split-window -v -c '#{pane_current_path}'  # Split panes vertically, keeps current path
+bind c new-window -c '#{pane_current_path}' # Create new window, keeps current path
+
+bind-key J resize-pane -D 10 # resize pane down 
+bind-key K resize-pane -U 10 # resize pane down
