--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,3 +37,40 @@ bind c new-window -c '#{pane_current_path}' # Create new window, keeps current p
 
 bind-key J resize-pane -D 10 # resize pane down 
 bind-key K resize-pane -U 10 # resize pane down
+
+################################################################
+# => Color 
+################################################################
+
+set-option -g default-terminal "screen-256color"
+
+################################################################
+# => Status Bar 
+################################################################
+
+set -g status-bg black
+set -g status-fg brightgreen 
+set -g status-interval 10
+set -g status-justify centre
+set -g status-left-length 50
+set -g status-attr nobright 
+set -g status-left '#[nobold][#S] #(whoami)@#(hostname -s) '
+set -g status-right "#[nobold]%a %m/%d  #[nobold]%H:%M%p"
+
+setw -g window-status-format "     #[nobold, nobright]#I #W     "
+setw -g window-status-current-format "     #[bold, bright][#I #W]     "
+
+################################################################
+# => Message Bar 
+################################################################
+
+set -g message-attr bright
+set -g message-bg green 
+set -g message-fg black 
+set -g display-time 1000
+
+################################################################
+# => Misc 
+################################################################
+
+bind r source-file ~/dotfiles/.tmux.conf \; display-message "Configuration reloaded."
