--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,3 +73,7 @@ set -g display-time 1000
 ################################################################
 
 bind r source-file ~/dotfiles/.tmux.conf \; display-message "Configuration reloaded."
+
+# fix stupid paste error introduced by sierra
+set -g default-shell $SHELL 
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
