Updated tmux config to use fish shell by default

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,5 +75,5 @@ set -g display-time 1000
 bind r source-file ~/dotfiles/.tmux.conf \; display-message "Configuration reloaded."
 
 # fix stupid paste error introduced by sierra
-set -g default-shell $SHELL 
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+set -g default-shell /usr/local/bin/fish 
+set -g default-command "reattach-to-user-namespace -l /usr/local/bin/fish"
