--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 ################################################################
-# CJAPPL fish_config 
+# CJAPPL tmux_config 
 ################################################################
 #                        .OO
 #                       .OOOO
@@ -74,6 +74,7 @@ set -g display-time 1000
 
 bind r source-file ~/dotfiles/.tmux.conf \; display-message "Configuration reloaded."
 
-# fix stupid paste error introduced by sierra
 set -g default-shell /usr/local/bin/fish 
-set -g default-command "reattach-to-user-namespace -l /usr/local/bin/fish"
+
+# fix stupid paste error introduced by sierra
+# set -g default-command "reattach-to-user-namespace -l /usr/local/bin/fish"
