Added possible fix for neovim escape times

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,3 +78,6 @@ set -g default-shell /usr/local/bin/fish
 
 # fix stupid paste error introduced by sierra
 # set -g default-command "reattach-to-user-namespace -l /usr/local/bin/fish"
+
+# Speed up escape times for neovim: https://github.com/neovim/neovim/wiki/FAQ
+set-option -sg escape-time 10
