Added fzf to the config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,13 @@
 #               `""""""'  `""""""'
 ################################################################
 
+# bind reload key
+bind-key r source-file ~/.tmux.conf \; display-message "Config reloaded!"
+
+set-option -g prefix C-Space
+unbind C-Space
+bind C-Space send-prefix
+
 ################################################################
 # => Windows/Panes
 ################################################################
@@ -37,6 +44,12 @@ bind c new-window -c '#{pane_current_path}' # Create new window, keeps current p
 
 bind-key J resize-pane -D 10 # resize pane down 
 bind-key K resize-pane -U 10 # resize pane down
+
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
 
 ################################################################
 # => Color 
@@ -63,9 +76,6 @@ setw -g window-status-current-format "     #[bold, bright][#I #W]     "
 # => Message Bar 
 ################################################################
 
-set -g message-attr bright
-set -g message-bg green 
-set -g message-fg black 
 set -g display-time 1000
 
 ################################################################
@@ -81,3 +91,8 @@ set -g default-shell /usr/local/bin/fish
 
 # Speed up escape times for neovim: https://github.com/neovim/neovim/wiki/FAQ
 set-option -sg escape-time 10
+
+set-window-option -g mode-keys vi
+
+# Increase scrollback buffer, default 2000
+set -g history-limit 10000
