--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,33 +56,35 @@ bind l select-pane -R
 ################################################################
 
 set-option -g default-terminal "screen-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+set -sa terminal-overrides ",*256col*:RGB"
 
 ################################################################
 # => Status Bar 
 ################################################################
+if-shell "test -f ~/dotfiles/tmuxline.snapshot" "source ~/dotfiles/tmuxline.snapshot"
 
-set -g status-bg black
-set -g status-fg brightgreen 
-set -g status-interval 10
-set -g status-justify centre
-set -g status-left-length 50
-set -g status-left '#[nobold][#S] #(whoami)@#(hostname -s) '
-set -g status-right "#[nobold]%a %m/%d  #[nobold]%H:%M%p"
+#set -g status-bg black
 
-setw -g window-status-format "     #[nobold, nobright]#I #W     "
-setw -g window-status-current-format "     #[bold, bright][#I #W]     "
+#set -g status-fg brightgreen 
+#set -g status-interval 10
+#set -g status-justify centre
+#set -g status-left-length 50
+#set -g status-left '#[nobold][#S] #(whoami)@#(hostname -s) '
+#set -g status-right "#[nobold]%a %m/%d  #[nobold]%H:%M%p"
+
+#setw -g window-status-format "     #[nobold, nobright]#I #W     "
+#setw -g window-status-current-format "     #[bold, bright][#I #W]     "
 
 ################################################################
 # => Message Bar 
 ################################################################
 
-set -g display-time 1000
+#set -g display-time 1000
 
 ################################################################
 # => Misc 
 ################################################################
-
-bind r source-file ~/dotfiles/.tmux.conf \; display-message "Configuration reloaded."
 
 set -g default-shell /usr/local/bin/fish 
 
