updating startup for new machine

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,7 +62,7 @@ set -sa terminal-overrides ",*256col*:RGB"
 ################################################################
 # => Status Bar 
 ################################################################
-if-shell "test -f ~/dotfiles/tmuxline.snapshot" "source ~/dotfiles/tmuxline.snapshot"
+source-file "~/dotfiles/tmuxline.snapshot"
 
 #set -g status-bg black
 
