--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,7 +86,7 @@ source-file "~/dotfiles/tmuxline.snapshot"
 # => Misc 
 ################################################################
 
-set -g default-shell /usr/local/bin/fish 
+set -g default-command fish
 
 # fix stupid paste error introduced by sierra
 # set -g default-command "reattach-to-user-namespace -l /usr/local/bin/fish"
