--- a/.tmux.conf
+++ b/.tmux.conf
@@ -98,3 +98,6 @@ set-window-option -g mode-keys vi
 
 # Increase scrollback buffer, default 2000
 set -g history-limit 10000
+
+# nvim requirement for autoread
+set-option -g focus-events on
